Fixed CSS for homepage modal images so they no longer get squished

--- a/src/sass/base.sass
+++ b/src/sass/base.sass
@@ -66,3 +66,6 @@ a
 
 .indigo 
     background-color: $mmblue !important
+
+.modal-image
+	object-fit: cover
